--- a/projects/cogul.html
+++ b/projects/cogul.html
@@ -210,13 +210,36 @@
 						It will be interesting to properly define what is a 'scene' by quantitatives indices
 					</aside>
 				</section>
+
+				<section data-background-iframe="https://www.go-fair.org/fair-principles/">
+					<div style="position: absolute; width: 30%; left:-200px ; top:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>FAIR<sup>*</sup> principles</h2>
+						<p>In the context of Internet accessibility, and the sharing and opening of data for research (Open Science)<br>
+						<br>
+						<small>Findable, Accessible, Interoperable, Reusable</small>
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+					</aside>
+				</section>
 				
+				<section data-background-iframe="https://archaeo.peercommunityin.org/">
+					<div style="position: absolute; width: 30%; right:-200px ; top:-200px ; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<h2>Peer-reviewed collaborative work</h2>
+						<!-- <smaller>EAMENA-0164997</smaller> -->
+						<p>We aim to expose the progress of our work, with data samples, through peer-reviewed working papers<br>
+						<br>
+						<!-- <smaller><a href="https://whc.unesco.org/en/list/1208/">https://whc.unesco.org/en/list/1208/</a></smaller> -->
+					</div>
+					<aside class="notes">
+					</aside>
+				</section>
+
 				<section data-background="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_cogul-workflow.png">
 					<aside class="notes">
 						Workflow
 					</aside>
 				</section>
-				
 
 			</div>
 		</div>
