--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<p>
 						<smaller>
 							<!-- <div> -->
-								<span style="">
+								<span>
 								<a href="https://github.com/zoometh/thomashuet#dr-thomas-huet-">Thomas Huet</a><br>
 								<small>University of Oxford</small><br>
 							 	<a href="https://www.arch.ox.ac.uk/people/dr-thomas-huet"> 
@@ -78,8 +78,9 @@
 						</a><br>
 						<span class="caption">Chaume, Mordant 2011</span>
 					</section>
-					<section>
+					<section style="top: 50%;">
 						<h3>All these examples result from instrumental practices that inform us on cultural choices</h3>
+
 						<b>Topographic analysis are scale invariant.</b> Link the <u>&mu;m scale</u> 🔬 of use-wear, with the <u>mm to cm scale</u> 📏 of a tool or a rock panel. 
 						And to link all these features with their precise locations (<u>m to km scale</u>) 🗺️
 					</section>
