--- a/projects/caa_3dlithic.html
+++ b/projects/caa_3dlithic.html
@@ -23,23 +23,21 @@
 			<header style="position: absolute; top: 50px; left: 100px; z-index:500; font-size:1.6em"></header>
 			<div class="slides">
 
-				<section>
+				<section style="bottom: 0;">
 					<!-- <a href="https://github.com/zoometh/rockart">
 						<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/prj_rockart_2.png" alt="" style="height: 180px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 					</a> -->
 					<h3>A workflow for reproducible use-wear analysis with open-source software</h3>
 					<h4>from 3D data process to 3D data sharing</h4>
 					<p>
-						<smaller>
-							<span style="font-size: 35px;">Thomas Huet<sup>1</sup>, Juan José Ibáñez<sup>2</sup>, Andrea Zupancich<sup>2</sup>, Ferran Estebaranz-Sánchez<sup>2</sup></span>
+							<span style="font-size: 25px;">Thomas Huet<sup style="font-size: 15px;"">1</sup>, Juan José Ibáñez<sup style="font-size: 15px;"">2</sup>, Andrea Zupancich<sup style="font-size: 15px;"">2</sup> and Ferran Estebaranz-Sánchez<sup style="font-size: 15px;"">2</sup></span>
 							<br>
-							<span style="font-size: 25px;"><sup>1</sup> University of Oxford, <sup>2</sup> CSIC-IMF</span>
+							<span style="font-size: 20px;"><sup>1</sup> University of Oxford, <sup>2</sup> CSIC-IMF</span>
 							<br>
-							<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
-							<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-cisc-imf.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
-						</smaller>
+							<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 120px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
+							<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-cisc-imf.png" alt="" style="height: 120px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
 					</p>
-					CAA2022</b>, Oxford, 8-11 August 2022
+					<span style="font-size: 25px;">CAA2022</b>, 8-11 August 2022, Oxford, UK</span>
 				</section>
 
 				<section>
