--- a/projects/caa_3dlithic.html
+++ b/projects/caa_3dlithic.html
@@ -30,12 +30,12 @@
 					<h3>A workflow for reproducible use-wear analysis with open-source software</h3>
 					<h4>from 3D data process to 3D data sharing</h4>
 					<p>
-							<span style="font-size: 25px;">Thomas Huet<sup style="font-size: 15px;"">1</sup>, Juan José Ibáñez<sup style="font-size: 15px;"">2</sup>, Andrea Zupancich<sup style="font-size: 15px;"">2</sup> and Ferran Estebaranz-Sánchez<sup style="font-size: 15px;"">2</sup></span>
-							<br>
-							<span style="font-size: 20px;"><sup>1</sup> University of Oxford, <sup>2</sup> CSIC-IMF</span>
-							<br>
-							<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 120px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
-							<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-cisc-imf.png" alt="" style="height: 120px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
+						<span style="font-size: 25px;">Thomas Huet<sup style="font-size: 15px;"">1</sup>, Juan José Ibáñez<sup style="font-size: 15px;"">2</sup>, Andrea Zupancich<sup style="font-size: 15px;"">2</sup> and Ferran Estebaranz-Sánchez<sup style="font-size: 15px;"">2</sup></span>
+						<br>
+						<span style="font-size: 20px;"><sup>1</sup> University of Oxford, <sup>2</sup> CSIC-IMF</span>
+						<br>
+						<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-oxford.png" alt="" style="height: 120px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
+						<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/inst-uni-cisc-imf.png" alt="" style="height: 120px; margin: 0 auto 4rem auto; background: transparent; vertical-align: middle;" class="demo-logo">
 					</p>
 					<span style="font-size: 25px;">CAA2022</b>, 8-11 August 2022, Oxford, UK</span>
 				</section>
@@ -139,7 +139,7 @@
 						<small><b>STructured light (STL)</b> SmartScan 3D Breuckmann laser 3D acquisition <br>by Millán Mozota, IMF-CSIC</small>
 						<aside class="notes">
 							The object scanned is an experimental peeble belonging to a wear analysis frame of reference, and prepared by Millán.
-							The accuracy of the scan is sub- mm. The RXFOR software was used to convert the point cloud into a mesh, and the OptoCat software was used to align the upper half of the scanned roller with the lower part of the scan, the RMS error was 0.006 mm.
+							The accuracy of the scan is sub- mm. The RXFOR software was used to convert the point cloud into a mesh, and the OptoCat software was used to align the upper half of the scanned peeble with the lower part of the scan, the RMS error was 0.006 mm.
 						</aside>
 					</section>
 
@@ -152,7 +152,7 @@
 						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/confoc.jpg" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo"><br>
 						<small><b>Confocal</b> SensoSCAN Sensofar PLu neox 3D acquisition <br>by Hala Alarashi, IMF-CSIC</small>
 						<aside class="notes">
-							The confocal optics was x5, depth 3,504 &mu;m with 293 sections. The acquisition window is 2.55 x 1.91 mm (768 x 516 px) with 'blue light' and topographic measurements.
+							The confocal objective was x5, depth 3,504 &mu;m with 293 sections. The acquisition window is 2.55 x 1.91 mm (768 x 516 px) with 'blue light' and topographic measurements.
 							During this process, when the pebble is under blue light, photogrammetry is performed.
 						</aside>
 					</section>
