--- a/projects/caa_3dlithic.html
+++ b/projects/caa_3dlithic.html
@@ -84,10 +84,10 @@
 							<td colspan="2" bgcolor="green" align="center">GitHub</td>
 						</tr>
 						<tr>
-						<td style="font-size: 0.7em;" colspan="2" bgcolor="gray" align="center"><a href="https://get.webgl.org/">WebGL</a></td>
+						<td style="font-size: 0.7em;" colspan="2" bgcolor="lightgray" align="center"><a href="https://get.webgl.org/">WebGL</a></td>
 						</tr>
 						<tr>
-						<td style="font-size: 0.7em;" colspan="2" bgcolor="gray" align="center"><a href="https://en.wikipedia.org/wiki/HTML5">HTML5</a></td>
+						<td style="font-size: 0.7em;" colspan="2" bgcolor="lightgray" align="center"><a href="https://en.wikipedia.org/wiki/HTML5">HTML5</a></td>
 						</tr>
 					</span>
 					</table>
