--- a/projects/caa_3dlithic.html
+++ b/projects/caa_3dlithic.html
@@ -138,7 +138,7 @@
 						<img src="https://raw.githubusercontent.com/zoometh/rockart/main/www/stl.jpg" alt="" style="height: 380px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 						<small><b>STructured light (STL)</b> SmartScan 3D Breuckmann laser 3D acquisition <br>by Millán Mozota, IMF-CSIC</small>
 						<aside class="notes">
-							The object scanned is an experimental peeble belonging to a wear analysis frame of reference, and prepared by Millán.
+							The scanned item is an experimental peeble belonging to a wear analysis frame of reference, and prepared by Millán Mozota.
 							The accuracy of the scan is sub- mm. The RXFOR software was used to convert the point cloud into a mesh, and the OptoCat software was used to align the upper half of the scanned peeble with the lower part of the scan, the RMS error was 0.006 mm.
 						</aside>
 					</section>
