first Siny+Plotly

--- a/projects/goa_stats.html
+++ b/projects/goa_stats.html
@@ -38,12 +38,73 @@
 					</p>
 				</section>
 
-				<section>
-					<h1>Study of representation techniques</h1>
+				<section data-auto-animate>
+					<h3>Historiography of Archaeology</h3>
+					<br>
+					<table style="color: white; font-size:75%;">
+						<tr>
+						   <th> Begining </th>
+						   <th> Period </th>
+						   <th> Description </th>
+						</tr>
+						<tr>
+						   <td> 1850 </td>
+						   <td> 1<sup>st</sup> revolution in archaeology </td>
+						   <td> theory of evolution, geology, early anthropology </td>
+						</tr>
+						<tr>
+						   <td> 1950 </td>
+						   <td> Culture-Historical </td>
+						   <td> typology (similarities), chronology, 14C </td>
+						</tr>
+						<tr>
+						   <td> 1960 </td>
+						   <td> Processual archaeology </td>
+						   <td> chain operative, positivism	</td>
+						</tr>
+						<tr>
+						   <td> 1980 </td>
+						   <td> Post-processual archaeology </td>
+						   <td> differences / similarities, cultural relativism	</td>
+						</tr>
+						<tr>
+							<td> 2020 </td>
+							<td> Tool-driven archaeology</td>
+							<td> Big data, modelling, aDNA </td>
+						 </tr>
+						<tr>
+					 </table>
+					 <aside class="notes">
+						<u>
+						<i>Culture-Historical is the 2nd revolution in archaeology</i>
+						<i>New Archaeology, or Processual archaeology, see the advent of statistics</i>
+						</u>
+					</aside>
 				</section>
 
-				
+				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/">
+					<h3>Dimensions</h3>
+					<h4>1</h4>
+					<aside class="notes">
+						Data with 1 dimension = 1 measure
+					</aside>
+				</section>
 
+				<section>
+					<h3>Dimensions</h3>
+					<h4>2</h4>
+				</section>
+
+				<section>
+					<h3>Dimensions</h3>
+					<h4>3</h4>
+				</section>
+
+				<section>
+					<h3>Dimensions</h3>
+					<h4>> 3</h4>
+				</section>
+				
 			</div>
 		</div>
 
