--- a/projects/goa_stats.html
+++ b/projects/goa_stats.html
@@ -71,8 +71,7 @@
 							<td> 2020 </td>
 							<td> Tool-driven archaeology</td>
 							<td> Big data, modelling, aDNA </td>
-						 </tr>
-						<tr>
+						</tr>
 					 </table>
 					 <aside class="notes">
 						<u>
@@ -82,27 +81,100 @@
 					</aside>
 				</section>
 
+				<section>
+					<h3>Birth of statistics</h3>
+					<aside class="notes">
+						!= probability
+						= state
+					</aside>
+				</section>
+
+				<section>
+					<h3>Computer science stack</h3>
+					<table style="color: white; font-size:75%;">
+						<tr>
+						   <th> semantic </th>
+						</tr>
+						<tr>
+						   <td> logic </td>
+						</tr>
+						<tr>
+						   <td> physic </td>
+						</tr>
+					 </table>
+					<aside class="notes">
+					</aside>
+				</section>
+
+				<section>
+					<h3>Birth of statistics</h3>
+					<aside class="notes">
+						!= probability
+						= state
+					</aside>
+				</section>
+
+				<section>
+					<h3>Gaussian</h3>
+					<aside class="notes">
+					Quetelet notes that the size of people in a population follows a Gaussian curve. According to him: Nature tries to achieve an average man but always with variations
+					</aside>
+				</section>
+
+				<section>
+					<h3>other distribution curves</h3>
+					<aside class="notes">
+						Poisson, exponential, logarithmique
+					</aside>
+				</section>
+
 				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/">
 					<h3>Dimensions</h3>
 					<h4>1</h4>
 					<aside class="notes">
 						Data with 1 dimension = 1 measure
+						Histogram = discretization = bins = change of scale
+					</aside>
+				</section>
+
+				<section>
+					<h3>Change of scales</h3>
+					quantitative
+					ordinal
+					nominal
+					bimodal
+				</section>
+
+				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim2/">
+					<h3>Dimensions</h3>
+					<h4>2</h4>
+					<aside class="notes">
+						utiliser la regression de 
+						Renfrew, C., & Bahn, P. (2012). Archaeology: theories, methods and practice. Thames and Hudson
+						regression = parcimonious = RMS
+					</aside>
+				</section>
+
+				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim3/">
+					<h3>Dimensions</h3>
+					<h4>3</h4>
+					<aside class="notes">
+						Useful when data are complete (chemical composition, genetics, etc.)
 					</aside>
 				</section>
 
 				<section>
 					<h3>Dimensions</h3>
-					<h4>2</h4>
-				</section>
-
-				<section>
-					<h3>Dimensions</h3>
-					<h4>3</h4>
-				</section>
-
-				<section>
-					<h3>Dimensions</h3>
 					<h4>> 3</h4>
+
+				</section>
+
+				<section>
+					<h3>Seriation</h3>
+					<aside class="notes">
+					Seriation = Guttman effect = horse shoe = arc
+					= relation directe sur la sphere
+					</aside>
 				</section>
 				
 			</div>
