--- a/projects/goa_stats.html
+++ b/projects/goa_stats.html
@@ -128,7 +128,7 @@
 					</aside>
 				</section>
 
-				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/">
+				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/app.html">
 					<h3>Dimensions</h3>
 					<h4>1</h4>
 					<aside class="notes">
