--- a/projects/goa_stats.html
+++ b/projects/goa_stats.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
 		<title>GOA MT 3</title>
 		<meta name="description" content="Integration of multiscalar 3D model for use-wear analysis">
@@ -128,7 +129,7 @@
 					</aside>
 				</section>
 
-				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/app.html">
+				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/">
 					<h3>Dimensions</h3>
 					<h4>111</h4>
 					<aside class="notes">
