--- a/projects/goa_stats.html
+++ b/projects/goa_stats.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+		<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
 
 		<title>GOA MT 3</title>
 		<meta name="description" content="Integration of multiscalar 3D model for use-wear analysis">
@@ -131,7 +131,7 @@
 
 				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/">
 					<h3>Dimensions</h3>
-					<h4>121</h4>
+					<h4>11211</h4>
 					<aside class="notes">
 						Data with 1 dimension = 1 measure
 						Histogram = discretization = bins = change of scale
