--- a/projects/goa_stats.html
+++ b/projects/goa_stats.html
@@ -83,47 +83,85 @@
 				</section>
 
 				<section>
-					<h3>Birth of statistics</h3>
-					<aside class="notes">
-						!= probability
-						= state
-					</aside>
-				</section>
-
-				<section>
-					<h3>Computer science stack</h3>
-					<table style="color: white; font-size:75%;">
-						<tr>
-						   <th> semantic </th>
-						</tr>
-						<tr>
-						   <td> logic </td>
-						</tr>
-						<tr>
-						   <td> physic </td>
-						</tr>
-					 </table>
-					<aside class="notes">
-					</aside>
+					<object data="http://www.academicstar.us/UploadFile/Picture/2019-9/201992615234104.pdf" style="height:50%; width:50%;"><a href="http://www.academicstar.us/UploadFile/Picture/2019-9/201992615234104.pdf">PDF laden</a></object>
 				</section>
 
 				<section>
 					<h3>Birth of statistics</h3>
+
+
+					<div style="position: absolute; width: 40%; top:200px; right:-200px; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(80, 80, 80, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<span style="float: right;">median</span><br>
+						<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/EdwardWright-CertaineErrorsinNavigation-1599.png/800px-EdwardWright-CertaineErrorsinNavigation-1599.png"  height="300">
+						<p>Title page of Edward Wright (1599) Certaine Errors in Navigation, ..., <a ref="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/EdwardWright-CertaineErrorsinNavigation-1599.png/800px-EdwardWright-CertaineErrorsinNavigation-1599.png">wikipedia</a></p>
+					</div>
+
+					<div style="position: absolute; width: 40%; top:200px; left:320px; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(80, 80, 80, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<span style="float: right;">normal distribution</span><br>
+						<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Normal_Distribution_PDF.svg/1280px-Normal_Distribution_PDF.svg.png"  height="300">
+						<p>A selection of Normal Distribution Probability Density Functions (PDFs). Both the mean, μ, and variance, σ², are varied, <a ref="https://upload.wikimedia.org/wikipedia/commons/thumb/7/74/Normal_Distribution_PDF.svg/1280px-Normal_Distribution_PDF.svg.png">wikipedia</a></p>
+					</div>
+
 					<aside class="notes">
-						!= probability
-						= state
+						Statistik (description of a state, a country): collecting population data through census, surveys 
+						!= probability. Based on social data (!= mathematics). Statistics need to analyse large amount of data (dataset), Statistics are manded by institutions, to be interesting they need to be realised over the long term to allow comparisons.
 					</aside>
 				</section>
 
 				<section>
-					<h3>Gaussian</h3>
+				<img src="https://raw.githubusercontent.com/zoometh/thomashuet/main/img/conformity.png" alt="" style="height: 480px; margin: 0 auto 4rem auto; background: white;" class="demo-logo">
+				<aside class="notes">
+					middle range theories
+				</aside>
+				</section>
+
+				<section>
+					<h3>Type of statistics</h3>
+					 <table class="stacktablecell">
+						<!-- <thead> -->
+						<tbody>
+						  <tr>
+							<td>descriptive</td>
+							<td>📊</td>
+						  </tr>
+						  <tr>
+							<td>explanatory</td>
+							<td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/GaussianScatterPCA.svg/800px-GaussianScatterPCA.svg.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo"></td>
+						  </tr>
+						  <tr>
+							<td>confirmatory</td>
+							<td><img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/NormalDist1.96.png" alt="" style="height: 100px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo"></td>
+							
+						  </tr>
+						</tbody>
+					</table>
+
 					<aside class="notes">
-					Quetelet notes that the size of people in a population follows a Gaussian curve. According to him: Nature tries to achieve an average man but always with variations
 					</aside>
 				</section>
 
 				<section>
-					<h3>other distribution curves</h3>
+					<h3>Distributions</h3>
+				<table>
+					<tbody>
+						<tr>
+						  <td>normal</td>
+						  <td></td>
+						</tr>
+						<tr>
+						  <td>exponential</td>
+						  <td></td>
+						</tr>
+						<tr>
+							<td>logarithmic</td>
+							<td></td>
+						  </tr>
+						  <tr>
+							<td>Poisson</td>
+							<td></td>
+						  </tr>
+					  </tbody>
+					</table>
 					<aside class="notes">
 						Poisson, exponential, logarithmique
 					</aside>
@@ -131,8 +169,9 @@
 
 				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim1/">
 					<h3>Dimensions</h3>
-					<h4>11211</h4>
+					<h4>1-dimension</h4>
 					<aside class="notes">
+						univariate
 						Data with 1 dimension = 1 measure
 						Histogram = discretization = bins = change of scale
 					</aside>
@@ -140,16 +179,33 @@
 
 				<section>
 					<h3>Change of scales</h3>
-					quantitative
-					ordinal
-					nominal
-					bimodal
+					<table>
+						<tbody>
+							<tr>
+							  <td>quantitative</td>
+							  <td></td>
+							</tr>
+							<tr>
+							  <td>ordinal</td>
+							  <td></td>
+							</tr>
+							<tr>
+								<td>nominal</td>
+								<td></td>
+							  </tr>
+							  <tr>
+								<td>bimodal</td>
+								<td></td>
+							  </tr>
+						  </tbody>
+						</table>
 				</section>
 
 				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim2/">
 					<h3>Dimensions</h3>
-					<h4>2</h4>
+					<h4>2-dimensions</h4>
 					<aside class="notes">
+						bi-variate
 						utiliser la regression de 
 						Renfrew, C., & Bahn, P. (2012). Archaeology: theories, methods and practice. Thames and Hudson
 						regression = parcimonious = RMS
@@ -158,7 +214,7 @@
 
 				<section data-background-iframe="http://shinyserver.cfs.unipi.it:3838/teach/stats/dim3/">
 					<h3>Dimensions</h3>
-					<h4>3</h4>
+					<h4>3-dimensions</h4>
 					<aside class="notes">
 						Useful when data are complete (chemical composition, genetics, etc.)
 					</aside>
@@ -166,8 +222,10 @@
 
 				<section>
 					<h3>Dimensions</h3>
-					<h4>> 3</h4>
-
+					<h4>> 3-dimensions</h4>
+					<aside class="notes">
+						multi-variate
+					</aside>
 				</section>
 
 				<section>
@@ -177,6 +235,40 @@
 					= relation directe sur la sphere
 					</aside>
 				</section>
+
+				<section>
+					<h3>XXI century</h3>
+					<div style="position: absolute; width: 40%; top:200px; right:-200px; box-shadow: 0 1px 4px rgba(0,0,0,0.5), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(80, 80, 80, 0.9); color: #fff; padding: 20px; font-size: 20px; text-align: left;">
+						<span style="float: right;">median</span><br>
+						<img src="https://cdn.britannica.com/62/71262-050-25BFC8AB/Garry-Kasparov-Deep-Blue-IBM-computer.jpg?w=690&h=388&c=crop"  height="300">
+						<p>Garry Kasparov and Deep Blue, <a ref="https://cdn.britannica.com/62/71262-050-25BFC8AB/Garry-Kasparov-Deep-Blue-IBM-computer.jpg?w=690&h=388&c=crop">Britannica</a></p>
+					</div>
+					<aside class="notes">
+						Deep Blue = expert system for chess
+						AI
+					</aside>
+				</section>
+
+				<section>
+					<h3>Computer science stack</h3>
+					 <table class="stacktablecell">
+						<!-- <thead> -->
+						<tbody>
+						  <tr>
+							<th rowspan="2">software</th>
+							<th>semantic</th>
+							<th>🖼️</th>
+						  </tr>
+						  <tr>
+							<th>logic</th>
+							<th><pre><code class="r">>_</code></th>
+						  </tr>
+						  <tr>
+							<td align="center" colspan="2">hardware</td>
+							<td>🔬</td>
+						  </tr>
+						</tbody>
+					</table>
 				
 			</div>
 		</div>
