--- a/projects/goa_stats.html
+++ b/projects/goa_stats.html
@@ -6,7 +6,7 @@
 		<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
 
 		<title>GOA MT 3</title>
-		<meta name="description" content="Integration of multiscalar 3D model for use-wear analysis">
+		<meta name="description" content="GAO presentation">
 		<meta name="author" content="Thomas Huet">
 
 		<link rel="stylesheet" href="../dist/reset.css">
