--- a/projects/caa_3dlithic.html
+++ b/projects/caa_3dlithic.html
@@ -120,9 +120,9 @@
 					</aside>
 				</section>
 
-				<section data-background-iframe="https://eamena-oxford.github.io/3DHOP/minimal/3DHOP_all_tools.html" data-background-interactive>
+				<section data-background-iframe="https://eamena-project.github.io/3DHOP/minimal/3DHOP_all_tools.html" data-background-interactive>
 					<div style="box-shadow: 0 1px 4px rgba(0,0,0,0.8), 0 5px 25px rgba(0,0,0,0.2); background-color: rgba(0, 0, 0, 0.5); color: #fff; padding: 20px; margin:0 auto; font-size: 30px;">
-						https://eamena-oxford.<b><u>github</u></b>.io/<u><b>3DHOP</b></u>/minimal/3DHOP_all_tools.html
+						https://eamena-project.<b><u>github</u></b>.io/<u><b>3DHOP</b></u>/minimal/3DHOP_all_tools.html
 					</div>
 					<aside class="notes">
 						The 3DHOP repo can be cloned from GitHub and the 3D default object, a gargo, can be rendered in GitHub pages a static site hosting service that takes HTML, CSS, and JS files straight from a repository.
